--- a/app/src/main/res/layout/activity_show_all_my_youtube_video.xml
+++ b/app/src/main/res/layout/activity_show_all_my_youtube_video.xml
@@ -9,7 +9,7 @@
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/YouTube"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent">
 
     </com.google.android.youtube.player.YouTubePlayerView>
