--- a/app/src/main/res/layout/layout_subject.xml
+++ b/app/src/main/res/layout/layout_subject.xml
@@ -29,6 +29,7 @@
             </ImageView>
 
             <TextView
+                android:textColor="#000000"
                 android:textSize="28dp"
                 android:id="@+id/TheMainText"
                 android:layout_width="wrap_content"
