--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_title" />
 
     <EditText
+        android:text="91"
         android:id="@+id/country_code_text"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
