--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="lightGray">#F2F2F2</color>
 
     <color name="disabledBtnBg">#999999</color>
+    <color name="text_color_full_detail">#000000</color>
 </resources>
