--- a/app/src/main/res/layout/activity_full_details_info.xml
+++ b/app/src/main/res/layout/activity_full_details_info.xml
@@ -8,15 +8,6 @@
 
     tools:context=".FullDetailsInfo">
 
-
-    <RelativeLayout
-        android:background="#bbbbbb"
-        android:clickable="false"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-    </RelativeLayout>
     <LinearLayout
 
         android:layout_width="match_parent"
@@ -37,20 +28,6 @@
                 android:textColor="@color/text_color_full_detail"
                 android:textSize="25dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-            </TextView>
-
-            <TextView
-                android:layout_marginEnd="20dp"
-                android:id="@+id/signIN"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginTop="30dp"
-                android:gravity="center"
-                android:text="Details form"
-                android:textColor="@color/text_color_full_detail"
-                android:textSize="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
             </TextView>
 
@@ -84,7 +61,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.cardview.widget.CardView
-
+            app:cardUseCompatPadding="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardCornerRadius="30dp">
@@ -147,7 +124,7 @@
     </TextView>
 
     <Spinner
-        android:id="@+id/editText2"
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginStart="50dp"
@@ -172,7 +149,7 @@
         android:textColor="@color/colorPrimary"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2">
+        app:layout_constraintTop_toBottomOf="@+id/spinner">
 
     </TextView>
     <Spinner
@@ -191,6 +168,7 @@
 
 
     <Button
+        android:onClick="SavedDetails"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textColor="#000000"
