--- a/app/src/main/res/layout/activity_subject_page.xml
+++ b/app/src/main/res/layout/activity_subject_page.xml
@@ -32,11 +32,40 @@
         </TextView>
 
     </androidx.cardview.widget.CardView>
+    <LinearLayout
+        android:id="@+id/lll"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Spinner
+            android:gravity="center"
+            android:layout_weight="1"
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/topid"
+            android:prompt="@string/spinner_change_class"
+            />
+        <Button
+            android:onClick="ChangeClass"
+            android:layout_weight="2"
+            android:text="Change Class"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+        </Button>
+    </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/topid" />
+        app:layout_constraintTop_toBottomOf="@+id/lll" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
