--- a/app/src/main/res/layout/scrren_page_lecture_rec.xml
+++ b/app/src/main/res/layout/scrren_page_lecture_rec.xml
@@ -9,5 +9,5 @@
         android:id="@+id/recy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/topid" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
